<resources>
    <string name="app_name">Netmon Formatter</string>
    <string name="slash">Garing (/)</string>
    <string name="comma">Koma (,)</string>
    <string name="separator_txt">Separator</string>
    <string name="t4gformat_txt">4G Format</string>
    <string name="laccid4g">TAC-ECI</string>
    <string name="lacenb4g">TAC-ENB-CI</string>
    <string name="enbonly4g">ENB-CI</string>
    <string name="t3gband">3G Band</string>
    <string name="t2gband">2G Band</string>
    <string name="tdefault">Default</string>
    <string name="allband">All bands</string>
    <string name="tconvertmc">Convert to MC</string>
    <string name="t4gmc">4G</string>
    <string name="tYes">Yes</string>
    <string name="tNo">No</string>
</resources>